# todo-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/todo/: __main__.py  cli.py  exceptions.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_models.py  test_storage.py
